# ur_module

./: .gitignore  .justfile  .pdm-python  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  example.env  install.sh  install_hendry_module.sh  install_urx.sh  pyproject.toml  ur_module.node.info.yaml  ur_module.node.yaml  wei.compose.yaml
.github/workflows/: docker-publish.yml  docker.yml  pre-commit.yml  tests.yml
definitions/: ur_module.node.info.yaml  ur_module.node.yaml
dev/: robo_brain.py  test.py  video_capture.py
docker/: Dockerfile  ros_entrypoint.sh
henrybot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
henrybot_description/config/: henry.srdf  henry_calibration.yaml  ompl_planning.yaml  ros_controllers.yaml
henrybot_description/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  henry_moveit_controller_manager.launch.xml  henrybot_urdf.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
henrybot_description/meshes/: table.stl
henrybot_description/rviz/: example_rviz_config.rviz  henry.rviz  henry_arm.rviz  henry_base.rviz
henrybot_description/urdf/: henry.urdf.xacro
henrybot_description/urdf/include/: mir_100_v2.urdf.xacro  table.urdf.xacro
mir_client/: package.xml  setup.cfg  setup.py
mir_client/config/: mir_config.yaml
mir_client/mir_client/: mir_map_client.py
src/: INTERFACE.md  KEYBOARD.md  keyboard_control.py  old_rest_node.py  speed_keyboard_control.py  ur_iso_exp.py  ur_rest_node.py
src/ur_driver/: package.xml  setup.cfg  setup.py  ur.py  ur_dashboard.py  ur_driver.py
src/ur_driver/scripts/: any object_detection.py
src/ur_driver/ur_tools/: __init__.py  ati_tool_changer_controller.py  camera_controller.py  gripper_controller.py  interpreter_socket.py  ot_pipette_controller.py  pipette_driver.py  robotiq_gripper_driver.py  robotiq_screwdriver_driver.py  screwdriver_controller.py  tricontinent_pipette_controller.py  urp_generator.py  wm_tool_changer_controller.py
src/ur_interface/: force_mode.py  ur.py  ur_dashboard.py  ur_kinematics.py
src/ur_interface/ur_tools/: gripper_controller.py  interpreter_socket.py  (+5 more)
tests/: interface_test.ipynb  node_test.ipynb  test_base.py  test_module.py  ur_interface_example.ipynb  ur_interface_tests.ipynb  ur_interface_usage.ipynb  wei.compose.yaml
tests/workcell_defs/: test_workcell.yaml
tests/workflow_defs/: test_workflow.yaml
tests/workflows/: test_workflow.yaml
ur5_client/: setup.cfg  setup.py
ur5_client/launch/: ur5_client.launch.py
ur5_client/ur5_client/: example_client.py  ur5_client.py
ur5_driver/: setup.py
ur5_driver/scripts/: dashboard_client.py  test_dashboard.py  transfer_test.py
ur5_driver/ur5_client/: package.xml  setup.py
ur5_driver/ur5_driver/: __init__.py  package.xml  ros_node_driver.py  setup.cfg  setup.py  ur5_driver.py  ur_dashboard.py
ur_client/: package.xml  setup.cfg  setup.py
ur_client/launch/: ur_action_server.launch.py  ur_client.launch.py
ur_client/ur_client/: ur_action_server.py  ur_client.py  ur_client.py.old  ur_node.py
ur_driver/: package.xml  setup.py
ur_driver/scripts/: Collaboration_test.py  camera_test copy.py  camera_test.py  camera_test_doga.py  intel_camera_test.py  new_test.py  tensortest.py  tensortest_alex.py  test.py  test_dashboard.py  test_urx.py  ur_camera.py
ur_driver/ur_driver/: object_pick_node.py  ros_node_driver.py  ur_dashboard.py  ur_driver.py
ur_interfaces/: CMakeLists.txt  package.xml
ur_interfaces/action/: RobotAction.action  robot_command.action
ur_node/: package.xml  setup.cfg  setup.py
ur_node/config/: ur_move_config.yaml
ur_node/launch/: ur_action_server.launch.py
ur_node/ur_client/: ur_action_client.py  ur_action_server.py
ur_node/ur_node/: ur_action_client.py  ur_action_server.py  ur_client.py.old
(+78 files in other folders)
