<?xml version="1.0"?>
<package format="2">
  <name>henrybot_description</name>
  <version>0.0.1</version>
  <description>URDF description of the MiR100 robot</description>
  <license>BSD</license>
  <maintainer email="ravescovi@anl.gov">Rafael Vescovi</maintainer>


  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
 
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>